--- a/kor/cmf_library/list.html
+++ b/kor/cmf_library/list.html
@@ -273,9 +273,9 @@ include "../../include/dbconn.html";
                     </div>
 
                     <!-- 여기에 save파라미터 있으면 class=active -->
-                    <form id="save_frm" name="save_frm" class="active">
+                    <form id="save_frm" name="save_frm" class="">
                         <p>
-                            <span>(cnt)</span> CMF Selected
+                            <span>(cnt)</span>&nbsp;CMF Selected
                         </p>
                         <p>
                             <a href="javascript:;" id="btn_cancel" class="btn_cancel">Cancel</a>
