more btn common
more btn common

--- a/kor/cmf_library/list.html
+++ b/kor/cmf_library/list.html
@@ -346,7 +346,7 @@ include "../../include/dbconn.html";
                         </li>
                     </ul>
 
-                    <div class="more">
+                    <div class="btn more">
                         <a href="javascript:;" php-data='클릭시 다보여주기' onclick="alert('클릭시 more')">Click here to see more</a>
                     </div>
                 </div>
