--- a/kor/trend_library/detail.html
+++ b/kor/trend_library/detail.html
@@ -64,7 +64,6 @@ include "../../include/dbconn.html";
 
     <header id="header">
         <nav id="header_wrap">
-
             <!-- HEADER_LEFT -->
             <h1 id="header_left">
                 <a href="../main/index.html"><img src="../images/common/logo_01.svg" alt="회사 로고"></a>
@@ -146,14 +145,11 @@ include "../../include/dbconn.html";
                         <h2>Trend Library</h2>
                         <h2>Mood Board</h2>
                     </div>
-
-
                 </div>
 
                 <div class="content_wrap">
 
                     <div class="con con_01">
-                        <h2><a href="">Mood Board <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
                         <ul>
                             <li>
                                 <a href="">
@@ -190,80 +186,8 @@ include "../../include/dbconn.html";
                         </ul>
                     </div>
 
-                    <div class="con con_01">
-                        <h2><a href="">CMF Research <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
-                        <ul>
-                            <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">asdasd</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_pc_01.png" alt=""></div>
-                                        <figcaption>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/sec_03_02_04.png" alt=""></div>
-                                        <figcaption>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    
-                    <div class="con con_01">
-                        <h2><a href="">Newsletter Archive <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
-                        <ul>
-                            <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">asdasd</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_pc_01.png" alt=""></div>
-                                        <figcaption>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/sec_03_02_04.png" alt=""></div>
-                                        <figcaption>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="btn more">
+                        <a href="javascript:;" php-data='클릭시 다보여주기' onclick="alert('클릭시 more')">Click here to see more</a>
                     </div>
 
                 </div>
