--- a/kor/trend_library/detail.html
+++ b/kor/trend_library/detail.html
@@ -137,57 +137,139 @@ include "../../include/dbconn.html";
         </nav>
     </header>
 
-    <main class="sub_page" id="trend_library">
+    <main class="sub_page detail" id="trend_library">
         <section>
             <article>
-                <div class="sec_tit">
-                    <div class="nav_location">
-                        <h2>Trend Library</h2>
-                        <h2>Mood Board</h2>
-                    </div>
+                <div class="detail_head">
+                    <a href=""><img src="../images/common/ico_arrow_05.svg" alt="move to prev page"></a>
                 </div>
 
-                <div class="content_wrap">
+                <div class="detail_body">
+                    <div class="navi">
+                        <ul class="lang">
+                            <li><a href="" class="active">KOR</a></li>
+                            <li><a href="">ENG</a></li>
+                        </ul>
+                        <h2>
+                            커피 찌꺼기,
+                            쓰임을 얻다
+                        </h2>
+                        <p class="date">2022. 10. 01</p>
 
-                    <div class="con con_01">
-                        <ul>
+                        <ul class="info">
                             <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
+                                스타벅스, 커피찌꺼기 재활용률 100%
                             </li>
                             <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_pc_01.png" alt=""></div>
-                                        <figcaption>
-                                        </figcaption>
-                                    </figure>
-                                </a>
+                                커피 베이스, 노트가 커피로 만들어졌다고?
                             </li>
                             <li>
-                                <a href="">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/sec_03_02_04.png" alt=""></div>
-                                        <figcaption>
-                                        </figcaption>
-                                    </figure>
-                                </a>
+                                포이엔, 커피찌꺼기를 바이오연료로?
                             </li>
                         </ul>
+
                     </div>
 
-                    <div class="btn more">
-                        <a href="javascript:;" php-data='클릭시 다보여주기' onclick="alert('클릭시 more')">Click here to see more</a>
+                    <div class="content">
+
+                        <dl id="trend">
+                            <dd>
+                                <div class="ckeditor">ckeditor 내용 들어갈자리</div>
+
+
+
+                                <div class="info">
+                                    <p>
+                                        더 다양한 트렌드가 궁금하시다면,
+                                        아래 버튼을 눌러 다양한 트렌드를 확인하세요.
+                                    </p>
+                                    <div class="btn more"><a href="">트렌드 라이브러리 구경하기</a></div>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <dl id="cmf">
+                            <dd>
+                                <div class="info">
+                                    <h2>
+                                        hïda’s Monthly Selection
+                                    </h2>
+                                    <p>
+                                        더 다양한 트렌드가 궁금하시다면,
+                                        아래 버튼을 눌러 다양한 트렌드를 확인하세요.
+                                    </p>
+                                </div>
+
+                                <div class="ckeditor">제품 6개</div>
+
+                                <div class="info">
+                                    <div class="btn more"><a href="">CMF 라이브러리 구경하기</a></div>
+                                </div>
+                            </dd>
+                        </dl>
+
+                        <dl id="newsletter">
+                            <dt>asd</dt>
+                            <dd>
+                                <a href="#none">
+                                    <img src="" alt="">
+                                    <span>The return of logo play</span>
+                                </a>
+                                <a href="#none">
+                                    <img src="" alt="">
+                                    <span>No Trash, It’s Treasure</span>
+                                </a>
+                                <a href="#none">
+                                    <img src="" alt="">
+                                    <span>Fantastic, Plastic</span>
+                                </a>
+                            </dd>
+                        </dl>
+
+                        <dl id="hida_info">
+                            <h2>hïda의 또다른 소식이 궁금하시다면?</h2>
+                            <ul>
+                                <li><a href="">Instagram</a><img src="../images/common/ico_arrow_01.svg" alt=""></li>
+                                <li><a href="">Facebook</a><img src="../images/common/ico_arrow_01.svg" alt=""></li>
+                                <li><a href="">LinkedIn</a><img src="../images/common/ico_arrow_01.svg" alt=""></li>
+                                <li><a href="">Behance</a><img src="../images/common/ico_arrow_01.svg" alt=""></li>
+                                <li><a href="">Pinterest</a><img src="../images/common/ico_arrow_01.svg" alt=""></li>
+                                <li><a href="">Naver Blog</a><img src="../images/common/ico_arrow_01.svg" alt=""></li>
+                            </ul>
+
+                            <h2>hïda 뉴스레터는 매월 초 발행됩니다.</h2>
+
+                            <div class="btn more"><a href="">의견 남기기</a></div>
+                            <div class="btn more mt-10"><a href="">문의하기</a></div>
+
+                            <p>© 2021 hida, a part of Intops. All rights reserved.</p>
+                        </dl>
+
+                        <dl id="newslist">
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <img src="../images/common/ico_list_01.svg" alt="">
+                                        <p>Newsletter list</p>
+                                        <span>date</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="../images/common/ico_next_01.svg" alt="">
+                                        <p>Next Newsletter Title</p>
+                                        <span>date</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="../images/common/ico_prev_01.svg" alt="">
+                                        <p>Prev Newsletter Title</p>
+                                        <span>date</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </dl>
                     </div>
 
                 </div>
