--- a/kor/trend_library/list_detail.html
+++ b/kor/trend_library/list_detail.html
@@ -64,7 +64,6 @@ include "../../include/dbconn.html";
 
     <header id="header">
         <nav id="header_wrap">
-
             <!-- HEADER_LEFT -->
             <h1 id="header_left">
                 <a href="../main/index.html"><img src="../images/common/logo_01.svg" alt="회사 로고"></a>
@@ -138,24 +137,22 @@ include "../../include/dbconn.html";
         </nav>
     </header>
 
-    <main class="sub_page list" id="trend_library">
+    <main class="sub_page list_detail" id="trend_library">
         <section>
             <article>
                 <div class="sec_tit">
                     <div class="nav_location">
                         <h2>Trend Library</h2>
+                        <h2>2번쨰 페이지</h2>
                     </div>
-
-
                 </div>
 
                 <div class="content_wrap">
 
                     <div class="con con_01">
-                        <h2><a href="">Mood Board <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
                         <ul>
                             <li>
-                                <a href="./list_detail.html">
+                                <a href="./detail.html">
                                     <figure>
                                         <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
                                         <div class="text_wrap">
@@ -169,130 +166,46 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
-                                <a href="./list_detail.html">
+                                <a href="./detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/main/mv_pc_01.png" alt=""></div>
+                                        <figcaption>
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                             <li>
-                                <a href="./list_detail.html">
+                               <a href="./detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
+                                        <div class="img_wrap"><img src="../images/main/mv_pc_01.png" alt=""></div>
+                                        <figcaption>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <figure>
+                                        <div class="img_wrap"><img src="../images/main/mv_pc_01.png" alt=""></div>
+                                        <figcaption>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <figure>
+                                        <div class="img_wrap"><img src="../images/main/sec_03_02_04.png" alt=""></div>
+                                        <figcaption>
+                                        </figcaption>
                                     </figure>
                                 </a>
                             </li>
                         </ul>
                     </div>
 
-                    <div class="con con_01">
-                        <h2><a href="">CMF Research <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
-                        <ul>
-                            <li>
-                                <a href="./list_detail.html">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="./list_detail.html">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="./list_detail.html">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    
-                    <div class="con con_01">
-                        <h2><a href="">Newsletter Archive <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
-                        <ul>
-                            <li>
-                                <a href="./list_detail.html">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="./list_detail.html">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="./list_detail.html">
-                                    <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
-                                            <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
-                                                <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
-                                                <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
-                                            </figcaption>
-                                        </div>
-                                    </figure>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="btn more">
+                        <a href="javascript:;" php-data='클릭시 다보여주기' onclick="alert('클릭시 more')">Click here to see more</a>
                     </div>
 
                 </div>
